k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tatarlang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tatarlang
      tier: backend
  template:
    metadata:
      labels:
        app: tatarlang
        tier: backend
    spec:
      containers:
        - name: backend
          image: tatarlang-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/v1/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: tatarlang
spec:
  selector:
    app: tatarlang
    tier: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
