k8s/06-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: tatarlang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tatarlang
      tier: rabbitmq
  template:
    metadata:
      labels:
        app: tatarlang
        tier: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: tatarlang
spec:
  selector:
    app: tatarlang
    tier: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http
      port: 15672
      targetPort: 15672
