k8s/09-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-smtp
  namespace: tatarlang
spec:
  type: ExternalName
  externalName: smtp.yandex.ru
